--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react-router": "^7.0.2",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
-    "tailwindcss": "^3.4.16"
+    "tailwindcss": "^3.4.16",
+    "uuid": "^11.0.3"
   },
   "scripts": {
     "start": "react-scripts start",
